Completely rewritten the valueToString method to make it over 999999999 times more readable. Also bug with int & float edit cells are fixed

--- a/src/views/models/BrowserView/Cell/ScalarListCell.scss
+++ b/src/views/models/BrowserView/Cell/ScalarListCell.scss
@@ -40,6 +40,7 @@
   font-size: 13px;
   line-height: 18px;
   padding: 15px;
+  height: 50px;
   color: $newGrey3;
   cursor: pointer;
   border-bottom: 1px solid $grey2;
